Bugfixes. Some refactoring. Javadoc improvements. Replacing JSON exception messaging by Java-based exception messaging. Avoiding relying on mutable global data on FwTester.